fixed z-index for .off-canvas to make it appear above text from ghost 5 header element on posts and pages (which have a z-index of 999)

--- a/assets/css/site/off-canvas.css
+++ b/assets/css/site/off-canvas.css
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 90;
+    z-index: 1000;
     overflow-y: scroll;
     padding: 60px 0 30px;
     width: 250px;
